[tool.coverage.paths]
source = ["basicnanoclient", "*/site-packages"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["setuptools", "wheel", "requests"]

[project]
name = "basicnanoclient"
version = "0.0.7"
description = "Nano RPC python client"
urls = {'Bug Tracker' = 'https://github.com/nanoswap/basicnanoclient/issues'}
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: The Unlicense (Unlicense)'
]
authors = [{'name' = 'Nathaniel Schultz', 'email' = 'nate@nanoswap.finance'}]
requires-python = '>=3.11'
readme = 'README.md'
license = {'file' = 'LICENSE'}
dependencies = [
    "requests",
    "setuptools",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python"
]
